# rust-rasterize

./: B-Spline Approximation.ipynb  Cargo.toml  Filter.nb  Gaussian.filter  Gaussian.json  Jinc.filter  Jinc.json  lanczos.filter  lanczos.json
src/: geometry.rs  main.rs  rasterizer.rs  svg.rs
src/filter/: box_filter.rs  dynamic_filter.rs  mod.rs
