[package]
name = "rasterization"
version = "0.1.0"
authors = ["Manuel Reinhardt <manuel.rhdt@gmail.com>"]

[dependencies]
image = "*"
arrayvec = "0.3.*"
palette = "0.2"
itertools = "0.6.*"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
rmp-serde = "0.13"
simd = "0.2.0"
clap = "^2"
svgparser = "0.4.2"
rayon = "0.8.2"

[profile.dev]
opt-level = 1